--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img src="Hp-Desktop-Portrait_900x760_Switch.jpg" alt="" />
 
             <div class="text-760">
-              <h4 class="h4-list">AW 022 023_KNITWEARa</h4>
+              <h4 class="h4-list">AW 022 023_KNITWEAR</h4>
             </div>
           </div>
 
